== Groups by itthinx - changelog.txt

= 2.12.0 =
* WordPress 5.6 compatible.
* Updated info on add-ons.
* Fixed checking menu items so that only those that are related to a post type are processed for access checking.

= 2.11.1 =
* Fixes missing capabilities with user_has_cap filter processing modified in 2.11.0.

= 2.11.0 =
* WordPress 5.5 compatible.
* Minimum WordPress version 5.2 is required.
* Fixed PHP 7.4 compatibility - Deprecated: Unparenthesized `a ? b : c ? d : e` is deprecated.
* Fixed protected entries appear on taxonomy archives when access restrictions for the Post type are not enabled.
* Fixed use of deprecated wp.editor and replaced with use of wp.blockEditor in Groups Member Block.
* Fixed use of deprecated wp.editor and replaced with use of wp.blockEditor in Groups Non-member Block.
* Added missing package.json etc. to Groups blocks sources.
* Block code reviewed, fixed formatting, added more documentation and cleaned up.
* Added classes to div wrappers that contain block content rendered.
* Modified the user_has_cap filter priority so that it kicks in as late as possible.
* Added the groups_user_has_cap filter which allows to further process after Groups has handled the user_has_cap filter.
* Fixed issues with backslashes displayed when part of a group or capability name.
* Added the groups_get_table_prefix filter.
* Fixed layout issues with the add-ons containers.
* Updated links to point to secure URLs where applicable.

= 2.10.0 =
* WordPress 5.4 compatible.
* Removed an alternative call to the deprecated wp_cache_reset() and preferrably calling wp_cache_init() when wp_cache_switch_to_blog() is not available.
* Fixed showing the Groups meta box to restrict posts on new post types which show access restrictions disabled in the options.
* Updated the add-ons section.

= 2.9.0 =
* WordPress 5.3 compatible.
* Added member counts displayed for each group under Groups > Groups.